--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(([A-Za-z0-9\-]+/)*[A-Za-z0-9\-]+)?$ $1.php
+RewriteRule ^(.*)$ index.php [QSA,L]
+DirectoryIndex index.php
